<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lokasi Pelayanan Kesehatan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_dokter">Praktek Dokter</string>
    <string name="title_apotek">Apotek</string>
    <string name="title_puskes">Puskesmas</string>
    <string name="title_clinic">Klinik Dokter</string>
    <string name="title_rs">Rumah Sakit</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_about">About</string>
    <string name="label_search">Cari Lokasi</string>
    <string name="action_search">Cari</string>
    <string name="search_hint">dokter gigi, dokter mata</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="action_maps">maps</string>
    <string name="title_activity_details">Map</string>
    <string name="title_activity_about">About</string>
    <string name="app_description">Aplikasi ini dapat digunakan  untuk mencari lokasi dan menampilkan rute lokasi pelayanan kesehatan di Kota Gorontalo.
        </string>
    <string name="add_favorite">Tambahkan Lokasi Favorit</string>
    <string name="remove_favorite">Hapus Lokasi Favorit</string>
    <string name="distance">Jarak  :</string>
    <string name="travelingTime">Waktu Tempuh :</string>
    <string name="hour">Hour</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="manual_select">Ambil Posisi Manual</string>
    <string name="getcurrent_location">setup my location</string>
    <string name="button_finish">Selesai</string>
    <string name="menu_dokter">Praktek Dokter</string>
    <string name="menu_apotek">Apotek</string>
    <string name="menu_puskesmas">Puskesmas</string>
    <string name="menu_klinik">Klinik DOkter</string>
    <string name="menu_rumahsakit">Rumah Sakit</string>
    <string name="title_activity_pick_location">Ambil Lokasi Manual</string>
    <string name="pick_location_required">You have to determine your location before continuing. Touch in map to select your location manually</string>
    <string name="title_activity_kategori_dokter">Kategori Dokter</string>
    <string name="banner_ad_unit_id">ca-app-pub-7486974203577954/6250104115</string>
    <string-array name="sortir">
        <item>a - z</item>
        <item>z - a</item>
        <item>terdeket</item>
        <item>terjauh</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>
    <string name="kota_Gorontalo">Kota Gorontalo</string>

</resources>
